--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.15.23",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
