--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@themesberg/flowbite": "^1.3.0",
         "jquery": "^3.6.4"
     }
 }
