--- a/.env
+++ b/.env
@@ -34,7 +34,17 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/khadamni4"
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
+# .env
+
+
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/twilio-notifier ###
+# TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
+###< symfony/twilio-notifier ###
+APP_AUTH_TOKEN=c8659a1fe9d8bbb677f20f96f4ecf8c9
+ACCOUNT_SID=ACce15af1244abdc2ffe799d047b731092
