--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/twilio-notifier": "5.4.*",
+        "symfony/ux-chartjs": "^2.7",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.16",
