--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "flowbite": "^1.6.5",
+        "jquery": "^3.6.4"
     }
 }
