--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "flowbite": "^1.6.5",
-        "jquery": "^3.6.4"
+        "flowbite": "^1.6.5"
     }
 }
