--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "doctrine/orm": "^2.14",
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-paginator-bundle": "^5.9",
-        "liip/imagine-bundle": "^2.10",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
+        "pyrrah/openweathermap-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
