--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "firebase/php-jwt": "^6.4",
         "google/apiclient": "^2.13",
+        "guzzlehttp/guzzle": "^7.5",
         "nyholm/psr7": "^1.7",
         "openai-php/client": "^0.4.2",
         "phpdocumentor/reflection-docblock": "^5.3",
