--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ STRIPE_API_KEY='sk_test_51Mf12IFy4iN0OTS46AQNXUqi4nCoXebnTQ8kEsrLipwDtJDfk8v132P
 
 ### The OpenAI API Key can be taken from the OpenAI Dashboard
 ### OpenAI Dashboard -> API Keys -> Create API Key
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 
 ### Google Calendar ID that can be taken from the Google Calendar Settings
 ### Google Calendar -> click on the calendar -> Calendar Settings -> Integrate calendar -> Calendar ID
@@ -72,3 +72,6 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
 ###< google/apiclient ###
+
+ZOOM_APIKEY=zZudO1joSrORcJUl5dY72g
+ZOOM_SECRETKEY=jHHTTSfCQXTQkwfDgwfaJrHQLfOyDEzdf7ua
