--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
 ###> symfony/framework-bundle ###
-/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -8,6 +7,7 @@
 /public/bundles/
 /var/
 /vendor/
+/README.md
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
